--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>goit-react-hw-08-phonebook</title>
+    <title>Test task</title>
     <script type="text/javascript">
       (function (l) {
         if (l.search[1] === '/') {
